# jupyterlab-heavyai

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  Dockerfile  Extract Vega Lite.ipynb  Ibis + Altair.ipynb  README.md  Untitled.ipynb  conf.py  confblog.py  content.html  contributing.html  docker-compose.yml  docker-start.sh  environment.yml  genindex.html  index.ipynb  installation.html  intro.html  mapd_renderer.py  markdown.html  objects.inv  omnisci_renderer.py  package-lock.json  package.json  postBuild  pyproject.toml  renderer.ipynb  requirements-rtd.txt  search.html  searchindex.js  session_ids.html  setup.py  sql.html  sql_notebook.html  (+5 more)
_sources/: markdown.md  session_ids.md  sql.md  sql_notebook.ipynb
binder/: environment.yml  postBuild
book/: _config.yml  _toc.yml  content.md  contributing.md  installation.md  intro.md  session_ids.md  sql.md  sql_notebook.ipynb  usage.md  visualization.ipynb  visualization.md
docker/: Dockerfile  Makefile  README.md  project.env
jupyterlab_heavyai/: __init__.py  altair.py  magics.py
jupyterlab_omnisci/: __init__.py  altair.py  altair_new.py  magics.py  vega_ibis.py
notebooks/: 1. Extract Vega Lite.ipynb  2. Extract From Altair.ipynb  2019.01.14 Error Compound.ipynb  3. Extract Use Cases - MapD examples.ipynb  3. Extract Use Cases.ipynb  3.WIP: Extract Use Cases - MapD examples.ipynb  4. Extract Use Cases - VL examples.ipynb  Charting Example.ipynb  Erroring Case.ipynb  Ibis + Altair + Extraction.ipynb  Ibis + Altair.ipynb  debounce.py  (+12 more)
(+34 files in other folders)
